crates/ty_python_semantic/resources/mdtest/snapshots/invalid_assignment.m…_-_Invalid_assignment_d…_-_Multiple_targets_(e20ddfd7a91affb0).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid_assignment.md - Invalid assignment diagnostics - Multiple targets
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_assignment.md
---

# Python source files

## mdtest_snippet.py

```
1 | x: int
2 | y: str
3 | 
4 | x, y = ("a", "b")  # error: [invalid-assignment]
5 | 
6 | x, y = (0, 0)  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Object of type `tuple[Literal["a"], Literal["b"]]` is not assignable to `int`
 --> src/mdtest_snippet.py:4:1
  |
2 | y: str
3 |
4 | x, y = ("a", "b")  # error: [invalid-assignment]
  | -      ^^^^^^^^^^ Incompatible value of type `tuple[Literal["a"], Literal["b"]]`
  | |
  | Declared type `int`
5 |
6 | x, y = (0, 0)  # error: [invalid-assignment]
  |
info: rule `invalid-assignment` is enabled by default

```

```
error[invalid-assignment]: Object of type `tuple[Literal[0], Literal[0]]` is not assignable to `str`
 --> src/mdtest_snippet.py:6:4
  |
4 | x, y = ("a", "b")  # error: [invalid-assignment]
5 |
6 | x, y = (0, 0)  # error: [invalid-assignment]
  |    -   ^^^^^^ Incompatible value of type `tuple[Literal[0], Literal[0]]`
  |    |
  |    Declared type `str`
  |
info: rule `invalid-assignment` is enabled by default

```
