crates/ty_python_semantic/resources/mdtest/snapshots/invalid_assignment.m…_-_Invalid_assignment_d…_-_Named_expression_(35c120b3bd9929f8).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_assignment.md - Invalid assignment diagnostics - Named expression
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_assignment.md
---

# Python source files

## mdtest_snippet.py

```
1 | x: int
2 | 
3 | (x := "three")  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Object of type `Literal["three"]` is not assignable to `int`
 --> src/mdtest_snippet.py:3:2
  |
1 | x: int
2 |
3 | (x := "three")  # error: [invalid-assignment]
  |  -    ^^^^^^^ Incompatible value of type `Literal["three"]`
  |  |
  |  Declared type `int`
  |
info: rule `invalid-assignment` is enabled by default

```
