crates/ty_python_semantic/resources/mdtest/snapshots/invalid_assignment_d…_-_Invalid_assignment_d…_-_Assigning_an_overloa…_(ecd82b3bda33ab82).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_assignment_details.md - Invalid assignment diagnostics - Assigning an overload set
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_assignment_details.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Protocol, overload, SupportsIndex
 2 | 
 3 | class SupportsFooAndBar(Protocol):
 4 |     def foo(self, name: str): ...
 5 |     def bar(self, x: bytes): ...
 6 | 
 7 | class IncompatibleFoo:
 8 |     def foo(self, name_: str): ...
 9 |     @overload
10 |     def bar(self, x: SupportsIndex): ...
11 |     @overload
12 |     def bar(self, x: bytes): ...
13 |     def bar(self, x: SupportsIndex | bytes): ...
14 | 
15 | def _(source: IncompatibleFoo):
16 |     target: SupportsFooAndBar = source  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Object of type `IncompatibleFoo` is not assignable to `SupportsFooAndBar`
  --> src/mdtest_snippet.py:16:13
   |
15 | def _(source: IncompatibleFoo):
16 |     target: SupportsFooAndBar = source  # error: [invalid-assignment]
   |             -----------------   ^^^^^^ Incompatible value of type `IncompatibleFoo`
   |             |
   |             Declared type
   |

```
