crates/ty_python_semantic/resources/mdtest/snapshots/invalid_assignment_d…_-_Invalid_assignment_d…_-_Deeply_nested_incomp…_(4771d5c9736f1df8).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_assignment_details.md - Invalid assignment diagnostics - Deeply nested incompatibilities
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_assignment_details.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import Callable
2 | 
3 | def source(x: tuple[int, str]) -> bool:
4 |     return False
5 | 
6 | target: Callable[[tuple[int, bytes]], bool] = source  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Object of type `def source(x: tuple[int, str]) -> bool` is not assignable to `(tuple[int, bytes], /) -> bool`
 --> src/mdtest_snippet.py:6:9
  |
4 |     return False
5 |
6 | target: Callable[[tuple[int, bytes]], bool] = source  # error: [invalid-assignment]
  |         -----------------------------------   ^^^^^^ Incompatible value of type `def source(x: tuple[int, str]) -> bool`
  |         |
  |         Declared type
  |

```
